--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="like">like</string>
     <string name="settings">settings</string>
     <string name="back">back</string>
+    <string name="title_activity_login">LoginActivity</string>
 </resources>
